--- a/src/components/StampContainer.css
+++ b/src/components/StampContainer.css
@@ -1,12 +1,24 @@
 .Header{
     background-color: goldenrod;
     border-radius: 10px;
+    margin: 0;
 }
 .Header h1 {
     margin: 0;
+    text-align: center;
+}
+
+#LinksHeader{
+    background: goldenrod;
+    margin: 0;
+    border-radius: 10px 10px 0px 0px;
+}
+.ReactStyle{
+    background-color: red;
 }
 
 .stampContainer {
+    width: 50%;
     background-color: rgb(67, 196, 174);
     border: 2px solid black;
     margin: 1px;
@@ -21,7 +33,9 @@
 
 .stampTable{
     background-color: lightgray;
-    
+    width: 600px;
+    height: 350px;
+    border-radius: 10px;
 } 
 
 
@@ -37,4 +51,11 @@
     background-color: lightpink;
     padding-left: 5px;
     padding-right: 5px;
+    
+}
+
+.MainWindow{
+    background-color: rgb(219, 145, 145);
+    background-size: cover;
+    border-radius: 10px;
 }
