--- a/src/components/StampContainer.css
+++ b/src/components/StampContainer.css
@@ -1,24 +1,16 @@
 .Header{
-    background-color: goldenrod;
-    border-radius: 10px;
+    background-color: gray;
+    border-radius: 10px 10px 0px 0px;
     margin: 0;
+    
 }
 .Header h1 {
     margin: 0;
     text-align: center;
 }
 
-#LinksHeader{
-    background: goldenrod;
-    margin: 0;
-    border-radius: 10px 10px 0px 0px;
-}
-.ReactStyle{
-    background-color: red;
-}
-
 .stampContainer {
-    width: 50%;
+    width: 99%;
     background-color: rgb(67, 196, 174);
     border: 2px solid black;
     margin: 1px;
@@ -29,33 +21,4 @@
     cursor: pointer;
     text-align: left;
     padding-left: 10px;
-}
-
-.stampTable{
-    background-color: lightgray;
-    width: 600px;
-    height: 350px;
-    border-radius: 10px;
-} 
-
-
-.tableHeader{
-    text-align: center;
-    padding-left: 5px;
-    padding-right: 4px;
-}
-
-.tableData{
-    text-align: center;
-    border: 1px solid rgb(83, 83, 83);
-    background-color: lightpink;
-    padding-left: 5px;
-    padding-right: 5px;
-    
-}
-
-.MainWindow{
-    background-color: rgb(219, 145, 145);
-    background-size: cover;
-    border-radius: 10px;
 }
